tests/paczka1/small_fuzzy/38007985.err
Error in line 1: pNfKhurJMx A731 66,6
Error in line 8: qtCu A415 1q,q
